--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@unform/core": "^2.1.0",
     "@unform/mobile": "^2.1.0",
     "axios": "^0.19.2",
+    "intl": "^1.2.5",
+    "json-server": "^0.16.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
