fix checkbox import

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.10.1",
+    "@react-native-community/checkbox": "^0.4.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.3.2",
     "@react-navigation/stack": "^5.3.5",
@@ -21,6 +22,7 @@
     "json-server": "^0.16.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-reanimated": "^1.8.0",
