--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.10.1",
     "@react-native-community/checkbox": "^0.4.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.8.0",
     "@react-navigation/native": "^5.3.2",
     "@react-navigation/stack": "^5.3.5",
     "@unform/core": "^2.1.0",
