--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@mdi/js": "^5.3.45",
+    "@mdi/react": "^1.4.0",
     "@react-native-community/async-storage": "^1.10.1",
     "@react-native-community/checkbox": "^0.4.1",
     "@react-native-community/masked-view": "^0.1.10",
