--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/async-storage": "^1.10.1",
     "@react-native-community/checkbox": "^0.4.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.0",
     "@react-navigation/drawer": "^5.8.0",
     "@react-navigation/native": "^5.3.2",
     "@react-navigation/stack": "^5.3.5",
@@ -24,6 +25,7 @@
     "intl": "^1.2.5",
     "json-server": "^0.16.1",
     "react": "16.11.0",
+    "react-icons": "^3.10.0",
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
