--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
+    "realm": "^6.0.2",
     "styled-components": "^5.1.0",
     "yup": "^0.28.5"
   },
