--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -223,5 +223,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
-project.ext.vectoricons = [iconFontName: ['Feather.ttf']]
+project.ext.vectoricons = [iconFontName: ['Feather.ttf', 'MaterialCommunityIcons.ttf', 'MaterialIcons.ttf']]
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
