--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "@react-native-community/checkbox": "^0.4.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/slider": "^3.0.0",
-    "@react-navigation/drawer": "^5.8.0",
-    "@react-navigation/native": "^5.3.2",
-    "@react-navigation/stack": "^5.3.5",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "@unform/core": "^2.1.0",
     "@unform/mobile": "^2.1.0",
     "axios": "^0.19.2",
     "intl": "^1.2.5",
     "json-server": "^0.16.1",
     "logkitty": "0.7.1",
-    "react": "16.11.0",
+    "react": "16.13.1",
+    "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-native": "0.62.2",
+    "react-is": "^16.13.1",
+    "react-native": "0.63.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-iphone-x-helper": "^1.2.1",
@@ -60,7 +62,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "2.5.0",
+    "eslint-plugin-react-hooks": "4",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^2.0.5",
