try drawer navigation active state

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,10 @@
     "no-empty-function": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-use-before-define": "off",
+
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "no-param-reassign": "off",
+
     "@typescript-eslint/no-empty-function": ["error"],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
