--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
 
     "@typescript-eslint/explicit-function-return-type": "off",
     "no-param-reassign": "off",
+    "no-console": "off",
 
     "@typescript-eslint/no-empty-function": ["error"],
     "react-hooks/rules-of-hooks": "error",
