--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,18 +26,18 @@
     "prettier/prettier": "error",
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
-    "no-empty-function": "off",
-    "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/no-use-before-define": "off",
-
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "no-param-reassign": "off",
-    "no-console": "off",
-
-    "@typescript-eslint/no-empty-function": ["error"],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+
+    "no-param-reassign": "off",
+    "no-unused-expressions": "off",
+    "no-console": "off",
     "import/prefer-default-export": "off",
     "import/extensions": [
       "error",
