--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "intl": "^1.2.5",
     "json-server": "^0.16.1",
     "logkitty": "0.7.1",
+    "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
@@ -56,13 +57,13 @@
     "@typescript-eslint/parser": "^2.33.0",
     "babel-jest": "^24.9.0",
     "eslint": "6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "4",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
