#change: adicionado gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # OSX
 #
 .DS_Store
+istockphoto-851887894-1024x1024.jpg
+istockphoto-917885990-1024x1024.jpg
+logo-1 1.png
+logo-1 2.png
 
 # Xcode
 #
